@@ -27,6 +27,9 @@ Changes since version 3.4.2
 General Changes
 ===============
 
+- Fixed a per-session memory leak in Glacier2 that occurred when
+  request buffering was enabled.
+
 - Fixed IceStorm bug that could cause a crash when using the Freeze
   database backend and multiple threads were trying to write to the
   database.
